Fixed several SASS mixins errors on mobile devices

--- a/assets/styles/phone/help.scss
+++ b/assets/styles/phone/help.scss
@@ -57,12 +57,6 @@ main
 						display: none;
 					}
 				}
-
-				&::after
-				{
-					// Amélioration de la zone de sélection.
-					@extend %larger-touch-zone;
-				}
 			}
 		}
 	}
